--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -12,4 +12,8 @@
     margin: 5px auto;
     background-color: #fff;
     text-align: center;
+    border-radius: 10px;
+}
+#sidebar li:hover {
+    background-color: rgba(0,0,0,0.01);
 }
